--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fragrant Bar Soap, Body Wash and Shower Gel from LUX | LUX India | LUX </title>
-    <link rel="icon" type="image/png" href="/images/lux.jpeg">
+    <link rel="icon" type="image/png" href="./images/lux.jpeg">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;400;500;600;700&display=swap"
         rel="stylesheet">
@@ -23,7 +23,7 @@
 <body>
     <div class="navbar">
         <div class="logo">
-            <img src="/images/35431836.png" alt="logo">
+            <img src="./images/35431836.png" alt="logo">
 
             <div class="menu">
                 <ul>
@@ -63,14 +63,14 @@
             <button class="learn">LEARN MORE</button>
         </div>
         <div class="container2">
-            <img src="/images/117542076.jpg" alt="">
+            <img src="./images/117542076.jpg" alt="">
         </div>
     </div>
 
     <div class="section2">
         <div class="pic">
-            <img src="/images/droplet.png" alt="" id="pic1">
-            <img src="/images/white-lily-right.png" alt="" id="pic2">
+            <img src="./images/droplet.png" alt="" id="pic1">
+            <img src="./images/white-lily-right.png" alt="" id="pic2">
 
         </div>
         <div class="text4">Our Indulgent Product Collection</div>
@@ -79,7 +79,7 @@
     <div class="section3">
         <div class="card1">
             <div class="box1">
-                <img src="/images/36235261.png" alt="" id="pic-box1">
+                <img src="./images/36235261.png" alt="" id="pic-box1">
             </div>
             <div class="rec-box1">
                 <h4>Soap Bars</h4>
@@ -88,7 +88,7 @@
         </div>
         <div class="card2">
             <div class="box2">
-                <img src="/images/45288590.png" alt="" id="pic-box2">
+                <img src="./images/45288590.png" alt="" id="pic-box2">
             </div>
             <div class="rec-box2">
                 <h4>Body Washes</h4>
@@ -97,7 +97,7 @@
         </div>
         <div class="card3">
             <div class="box3">
-                <img src="/images/107732450.png" alt="" id="pic-box3">
+                <img src="./images/107732450.png" alt="" id="pic-box3">
             </div>
             <div class="rec-box3">
                 <h4>Bath & Body</h4>
@@ -119,7 +119,7 @@
         <div class="sec5-title">Top Product</div>
         <div class="sec5">
             <div class="sec5-img">
-                <img src="/images/35712662.png" alt="">
+                <img src="./images/35712662.png" alt="">
             </div>
             <div class="sec5-box">
                 <div class="sec5-text">
@@ -131,9 +131,9 @@
                         skin glowing and hydrated. </p>
                 </div>
                 <div class="sec5-icons">
-                    <img src="/images/fragrance.png" alt="">
-                    <img src="/images/everscent.png" alt="">
-                    <img src="/images/long-lasting.png" alt="">
+                    <img src="./images/fragrance.png" alt="">
+                    <img src="./images/everscent.png" alt="">
+                    <img src="./images/long-lasting.png" alt="">
                 </div>
                 <button class="learn">VIEW THE DETAILS</button>
             </div>
@@ -146,7 +146,7 @@
         </div>
         <div class="footer">
             <div class="foot-img">
-                <img src="/images/35431836.png" width="120px" height="80px">
+                <img src="./images/35431836.png" width="120px" height="80px">
             </div>
             <div class="legal">
                 <div class="foot-title">Legal</div>
@@ -181,7 +181,7 @@
             </div>
         </div>
         <div class="end">
-            <img src="/images/1513657.png" alt=""> 
+            <img src="./images/1513657.png" alt=""> 
             <div class="end-text">© 2025 Unilever. All Rights Reserved <i class="fa-solid fa-arrow-up-right-from-square"></i></div>
             
         </div>
